# pokedex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codecov.yml  install.sh
.github/workflows/: coverage.yml
data/: known_issues.md  za_encounters.json
data/overrides/: evolutions.json  form_evolutions.json  pokemon.json  regional_encounters.json
scripts/: coverage.sh  scrape_za_encounters.py  screenplay.py
src/: cli.rs  discover.rs  lib.rs  main.rs  output.rs
src/commands/: collection.rs  db_cmd.rs  dex.rs  game.rs  home.rs  item.rs  location.rs  mod.rs  pokemon.rs  type_cmd.rs
src/db/: mod.rs  models.rs  overrides.rs  queries.rs  seed.rs
tests/: run_screenplays.rs  test_seed.rs  validate_encounters.rs  validate_encounters.sh
tests/screenplays/: a_hateoas_discovery_wa_20260322_062226.yaml  a_hateoas_walker.yaml  b_cross_game.yaml  b_cross_game_collectio_20260322_141614.yaml  c_data_quality.yaml  cov_coverage_rationalize_20260322_171538.yaml  d_edge_cases.yaml  d_error_and_edge_case__20260322_062141.yaml  dl_dex_lookup_20260331_054219.yaml  e_competitive.yaml  e_competitive_pokemon__20260322_062136.yaml  f_living_dex.yaml  fe_form_evolution_annot_20260331_044335.yaml  g_alpha_and_form_speci_20260322_062227.yaml  g_forms_alpha.yaml  ge_game_encounters_and__20260401_042630.yaml  h_home_transfers.yaml  i_variants.yaml  item_item_commands_20260331_050448.yaml  j_red_20260322_053718.yaml  j_red_playthrough.yaml  k_lgp_playthrough.yaml  l_gold_playthrough.yaml  l_gold_silver_johto_pl_20260322_141614.yaml  m_ruby_playthrough.yaml  n_diamond_playthrough.yaml  (+14 more)
(+82 files in other folders)
