[package]
name = "pokedex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tar = "0.4"

[dev-dependencies]
serde_yaml = "0.9"
